Port Base Metals to Minecraft 1.13.2