@@ -1,6 +1,7 @@
 package zone.moddev.mc.basemetals.content;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -9,75 +10,86 @@ import java.util.function.Supplier;
 
 import zone.moddev.mc.basemetals.BaseMetals;
 import zone.moddev.mc.basemetals.ModTabs;
+import zone.moddev.mc.basemetals.entity.ModEntities;
 import zone.moddev.mc.basemetals.material.MaterialCatalogue;
 import zone.moddev.mc.basemetals.material.MaterialDefinition;
-import zone.moddev.mc.basemetals.entity.ModEntities;
 
-import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.item.BlockItem;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.level.block.AnvilBlock;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.ButtonBlock;
-import net.minecraft.world.level.block.DoorBlock;
-import net.minecraft.world.level.block.IronBarsBlock;
-import net.minecraft.world.level.block.LeverBlock;
-import net.minecraft.world.level.block.PressurePlateBlock;
-import net.minecraft.world.level.block.SlabBlock;
-import net.minecraft.world.level.block.StairBlock;
-import net.minecraft.world.level.block.StoneButtonBlock;
-import net.minecraft.world.level.block.TrapDoorBlock;
-import net.minecraft.world.level.block.WallBlock;
-import net.minecraft.world.level.block.LiquidBlock;
-import net.minecraft.world.level.block.state.BlockBehaviour;
-import net.minecraft.world.level.material.Material;
-import net.minecraft.world.level.material.Fluid;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.sounds.SoundEvents;
-import net.minecraft.world.level.block.SoundType;
-import net.minecraftforge.eventbus.api.IEventBus;
-import net.minecraftforge.fluids.FluidAttributes;
-import net.minecraftforge.fluids.ForgeFlowingFluid;
-import net.minecraftforge.registries.DeferredRegister;
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.registries.RegistryObject;
+import net.minecraft.block.Block;
+import net.minecraft.block.BlockButtonStone;
+import net.minecraft.block.BlockDoor;
+import net.minecraft.block.BlockLever;
+import net.minecraft.block.BlockPane;
+import net.minecraft.block.BlockPressurePlate;
+import net.minecraft.block.BlockSlab;
+import net.minecraft.block.BlockStairs;
+import net.minecraft.block.BlockTrapDoor;
+import net.minecraft.block.BlockWall;
+import net.minecraft.block.BlockFlowingFluid;
+import net.minecraft.block.SoundType;
+import net.minecraft.block.material.Material;
+import net.minecraft.fluid.FlowingFluid;
+import net.minecraft.fluid.Fluid;
+import net.minecraft.fluid.IFluidState;
+import net.minecraft.init.Blocks;
+import net.minecraft.init.Items;
+import net.minecraft.inventory.EntityEquipmentSlot;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemBlock;
+import net.minecraft.item.ItemGroup;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.registry.IRegistry;
+import net.minecraftforge.common.ToolType;
+import net.minecraftforge.event.RegistryEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.common.Mod;
 
 /** All content registration, generated from the immutable catalogues. */
+@Mod.EventBusSubscriber(modid = BaseMetals.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD)
 public final class ModContent {
-    public static final DeferredRegister<Block> BLOCKS = DeferredRegister.create(ForgeRegistries.BLOCKS, BaseMetals.MOD_ID);
-    public static final DeferredRegister<Item> ITEMS = DeferredRegister.create(ForgeRegistries.ITEMS, BaseMetals.MOD_ID);
-    public static final DeferredRegister<Fluid> FLUIDS = DeferredRegister.create(ForgeRegistries.FLUIDS, BaseMetals.MOD_ID);
+    private static final Map<String, RegistryHandle<Block>> BLOCKS_BY_ID =
+            new LinkedHashMap<String, RegistryHandle<Block>>();
+    private static final Map<String, RegistryHandle<Item>> ITEMS_BY_ID =
+            new LinkedHashMap<String, RegistryHandle<Item>>();
+    private static final Map<String, Supplier<? extends Block>> BLOCK_FACTORIES =
+            new LinkedHashMap<String, Supplier<? extends Block>>();
+    private static final Map<String, Supplier<? extends Item>> ITEM_FACTORIES =
+            new LinkedHashMap<String, Supplier<? extends Item>>();
+    private static final Map<String, MaterialContent> MATERIALS =
+            new LinkedHashMap<String, MaterialContent>();
+    private static final Map<String, FluidContent> FLUID_CONTENT =
+            new LinkedHashMap<String, FluidContent>();
+    private static final Map<String, Integer> FLUID_COLOURS =
+            new LinkedHashMap<String, Integer>();
+    private static final List<String> HIDDEN_BLOCKS = new ArrayList<String>();
 
-    private static final Map<String, RegistryObject<? extends Block>> BLOCKS_BY_ID = new LinkedHashMap<>();
-    private static final Map<String, RegistryObject<Item>> ITEMS_BY_ID = new LinkedHashMap<>();
-    private static final Map<String, MaterialContent> MATERIALS = new LinkedHashMap<>();
-    private static final Map<String, FluidContent> FLUID_CONTENT = new LinkedHashMap<>();
-    private static final List<String> HIDDEN_BLOCKS = new ArrayList<>();
-
-    public static final RegistryObject<Block> HUMAN_DETECTOR;
-
-    private static final List<String> MATERIAL_BLOCK_FORMS = List.of(
+    private static final List<String> MATERIAL_BLOCK_FORMS = list(
             "block", "plate", "bars", "door", "trapdoor", "button", "slab", "lever",
             "pressure_plate", "stairs", "wall");
-    private static final List<String> BASIC_ITEM_FORMS = List.of("ingot", "nugget", "powder", "smallpowder");
-    private static final List<String> PROCESSING_FORMS = List.of(
+    private static final List<String> BASIC_ITEM_FORMS = list("ingot", "nugget", "powder", "smallpowder");
+    private static final List<String> PROCESSING_FORMS = list(
             "casing", "dense_plate", "crushed", "crushed_purified", "crystal", "shard", "clump", "powder_dirty");
 
+    public static final RegistryHandle<Block> HUMAN_DETECTOR;
+
     static {
-        MaterialCatalogue.ALL.forEach(ModContent::registerMaterial);
-        registerAnvil("stone_anvil", BlockBehaviour.Properties.of(Material.STONE)
-                .sound(SoundType.STONE).strength(5.0F, 10.0F));
+        for (MaterialDefinition material : MaterialCatalogue.ALL) registerMaterial(material);
+        registerAnvil("stone_anvil", Block.Properties.create(Material.ROCK)
+                .sound(SoundType.STONE).hardnessAndResistance(5.0F, 10.0F));
         registerAnvil("steel_anvil", metalProperties(MaterialCatalogue.get("steel")));
         registerAnvil("adamantine_anvil", metalProperties(MaterialCatalogue.get("adamantine")));
         HUMAN_DETECTOR = registerBlock("human_detector",
-                () -> new HumanDetectorBlock(BlockBehaviour.Properties.of(Material.METAL)
-                        .sound(SoundType.METAL).strength(5.0F).noCollission()), true);
+                new Supplier<Block>() {
+                    @Override public Block get() {
+                        return new HumanDetectorBlock(Block.Properties.create(Material.IRON)
+                                .sound(SoundType.METAL).hardnessAndResistance(5.0F).doesNotBlockMovement());
+                    }
+                }, true);
         registerVanillaBits();
-        MaterialCatalogue.ALL.forEach(material -> registerFluid(material.name(), material.colour(),
-                material.name().equals("mercury")));
+        for (MaterialDefinition material : MaterialCatalogue.ALL) {
+            registerFluid(material.name(), material.colour(), "mercury".equals(material.name()));
+        }
         Map<String, MaterialDefinition> vanillaFluids = vanillaDefinitions();
-        for (String name : List.of("charcoal", "coal", "diamond", "emerald", "ender", "gold", "iron",
+        for (String name : list("charcoal", "coal", "diamond", "emerald", "ender", "gold", "iron",
                 "lapis", "obsidian", "prismarine", "quartz", "wood", "redstone", "stone")) {
             int colour = vanillaFluids.containsKey(name) ? vanillaFluids.get(name).colour() : 0xFFFFFF;
             registerFluid(name, colour, false);
@@ -86,56 +98,112 @@ public final class ModContent {
 
     private ModContent() {}
 
-    public static void register(IEventBus bus) {
-        BLOCKS.register(bus);
-        ITEMS.register(bus);
-        FLUIDS.register(bus);
+    /** Forge 25 still owns fluids in Minecraft's vanilla registry. */
+    public static synchronized void initializeFluids() {
+        for (Map.Entry<String, FluidContent> entry : FLUID_CONTENT.entrySet()) {
+            FluidContent content = entry.getValue();
+            if (isBound(content.source())) continue;
+            MoltenFluid flowing = new MoltenFluid.Flowing(entry.getKey());
+            MoltenFluid source = new MoltenFluid.Source(entry.getKey());
+            content.flowing().bind(flowing);
+            content.source().bind(source);
+            IRegistry.field_212619_h.put(id("flowing_" + entry.getKey()), flowing);
+            IRegistry.field_212619_h.put(id(entry.getKey()), source);
+            for (Fluid fluid : new Fluid[] { flowing, source }) {
+                for (IFluidState state : fluid.getStateContainer().getValidStates()) {
+                    Fluid.STATE_REGISTRY.add(state);
+                }
+            }
+        }
     }
 
-    public static Map<String, MaterialContent> materials() {
-        return Collections.unmodifiableMap(MATERIALS);
+    private static boolean isBound(RegistryHandle<?> handle) {
+        try { handle.get(); return true; } catch (IllegalStateException ignored) { return false; }
     }
 
-    public static Map<String, RegistryObject<? extends Block>> blocksById() {
-        return Collections.unmodifiableMap(BLOCKS_BY_ID);
+    @SubscribeEvent
+    public static void registerBlocks(RegistryEvent.Register<Block> event) {
+        for (Map.Entry<String, Supplier<? extends Block>> entry : BLOCK_FACTORIES.entrySet()) {
+            Block value = entry.getValue().get();
+            value.setRegistryName(BaseMetals.MOD_ID, entry.getKey());
+            BLOCKS_BY_ID.get(entry.getKey()).bind(value);
+            event.getRegistry().register(value);
+        }
     }
 
-    public static Map<String, RegistryObject<Item>> itemsById() {
-        return Collections.unmodifiableMap(ITEMS_BY_ID);
+    @SubscribeEvent
+    public static void registerItems(RegistryEvent.Register<Item> event) {
+        for (Map.Entry<String, Supplier<? extends Item>> entry : ITEM_FACTORIES.entrySet()) {
+            Item value = entry.getValue().get();
+            value.setRegistryName(BaseMetals.MOD_ID, entry.getKey());
+            ITEMS_BY_ID.get(entry.getKey()).bind(value);
+            event.getRegistry().register(value);
+        }
+        zone.moddev.mc.basemetals.trade.BaseMetalsTrades.register();
     }
 
-    public static List<String> hiddenBlocks() {
-        return List.copyOf(HIDDEN_BLOCKS);
+    public static Map<String, MaterialContent> materials() { return Collections.unmodifiableMap(MATERIALS); }
+    public static Map<String, RegistryHandle<Block>> blocksById() { return Collections.unmodifiableMap(BLOCKS_BY_ID); }
+    public static Map<String, RegistryHandle<Item>> itemsById() { return Collections.unmodifiableMap(ITEMS_BY_ID); }
+    public static List<String> hiddenBlocks() { return Collections.unmodifiableList(HIDDEN_BLOCKS); }
+    public static Map<String, FluidContent> fluids() { return Collections.unmodifiableMap(FLUID_CONTENT); }
+
+    public static int fluidColour(Fluid fluid) {
+        for (Map.Entry<String, FluidContent> entry : FLUID_CONTENT.entrySet()) {
+            FluidContent content = entry.getValue();
+            if (fluid == content.source().get() || fluid == content.flowing().get()) {
+                Integer colour = FLUID_COLOURS.get(entry.getKey());
+                return colour == null ? 0xFFFFFF : colour.intValue();
+            }
+        }
+        return 0xFFFFFF;
     }
 
-    public static Map<String, FluidContent> fluids() {
-        return Collections.unmodifiableMap(FLUID_CONTENT);
+    public static boolean isBaseMetalsFluid(Fluid fluid) {
+        for (FluidContent content : FLUID_CONTENT.values()) {
+            if (fluid == content.source().get() || fluid == content.flowing().get()) return true;
+        }
+        return false;
     }
 
-    public static RegistryObject<Item> item(String id) {
-        RegistryObject<Item> item = ITEMS_BY_ID.get(id);
+    public static RegistryHandle<Item> item(String id) {
+        RegistryHandle<Item> item = ITEMS_BY_ID.get(id);
         if (item == null) throw new IllegalArgumentException("Unknown item " + id);
         return item;
     }
 
+    public static FluidContent fluid(String id) {
+        FluidContent fluid = FLUID_CONTENT.get(id);
+        if (fluid == null) throw new IllegalArgumentException("Unknown fluid " + id);
+        return fluid;
+    }
+
     private static void registerMaterial(MaterialDefinition material) {
-        Map<String, RegistryObject<Block>> blocks = new LinkedHashMap<>();
-        Map<String, RegistryObject<Item>> items = new LinkedHashMap<>();
+        Map<String, RegistryHandle<Block>> blocks = new LinkedHashMap<String, RegistryHandle<Block>>();
+        Map<String, RegistryHandle<Item>> items = new LinkedHashMap<String, RegistryHandle<Item>>();
         if (material.hasEquipment()) {
             for (String form : MATERIAL_BLOCK_FORMS) {
                 String id = material.name() + "_" + form;
-                RegistryObject<Block> block = registerMaterialBlock(id, form, material, true);
+                RegistryHandle<Block> block = registerMaterialBlock(id, form, material, true,
+                        new Supplier<Block.Properties>() {
+                            @Override public Block.Properties get() { return metalProperties(material); }
+                        }, null);
                 blocks.put(form, block);
                 items.put(form, ITEMS_BY_ID.get(id));
             }
             String doubleSlab = "double_" + material.name() + "_slab";
             blocks.put("double_slab", registerBlock(doubleSlab,
-                    () -> new CompatibilityDoubleSlabBlock(metalProperties(material)), false));
+                    new Supplier<Block>() {
+                        @Override public Block get() { return new CompatibilityDoubleSlabBlock(metalProperties(material), material.requiredHarvestLevel()); }
+                    }, false));
             HIDDEN_BLOCKS.add(doubleSlab);
         }
         if (material.hasOre()) {
             String id = material.name() + "_ore";
-            blocks.put("ore", registerBlock(id, () -> new Block(oreProperties(material)), true));
+            blocks.put("ore", registerBlock(id,
+                    new Supplier<Block>() {
+                        @Override public Block get() { return new HarvestBlock(oreProperties(material), material.requiredHarvestLevel()); }
+                    }, true));
             items.put("ore", ITEMS_BY_ID.get(id));
         }
         for (String form : BASIC_ITEM_FORMS) {
@@ -145,144 +213,132 @@ public final class ModContent {
             items.put("blend", registerSimpleMaterialItem(material.name() + "_blend", material));
             items.put("smallblend", registerSimpleMaterialItem(material.name() + "_smallblend", material));
         }
-        if (material.hasEquipment()) {
-            registerEquipment(material, items);
-        }
+        if (material.hasEquipment()) registerEquipment(material, items);
         if (material.processingForms()) {
             for (String form : PROCESSING_FORMS) {
                 items.put(form, registerSimpleMaterialItem(material.name() + "_" + form, material));
             }
         }
-        MATERIALS.put(material.name(), new MaterialContent(material,
-                Collections.unmodifiableMap(blocks), Collections.unmodifiableMap(items)));
+        MATERIALS.put(material.name(), new MaterialContent(material, blocks, items));
     }
 
-    private static RegistryObject<Block> registerMaterialBlock(String id, String form,
-            MaterialDefinition material, boolean item) {
-        return registerMaterialBlock(id, form, material, item,
-                () -> metalProperties(material),
-                () -> MATERIALS.containsKey(material.name())
-                        ? MATERIALS.get(material.name()).blocks().get("block").get().defaultBlockState()
-                        : net.minecraft.world.level.block.Blocks.IRON_BLOCK.defaultBlockState());
+    private static RegistryHandle<Block> registerMaterialBlock(String id, String form,
+            final MaterialDefinition material, boolean hasItem,
+            final Supplier<Block.Properties> properties, final Supplier<Block> stairBase) {
+        Supplier<Block> factory;
+        if ("plate".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new PlateBlock(properties.get(), material.requiredHarvestLevel()); } };
+        } else if ("bars".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestPane(properties.get().variableOpacity(), material.requiredHarvestLevel()); } };
+        } else if ("door".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestDoor(properties.get().variableOpacity(), material.requiredHarvestLevel()); } };
+        } else if ("trapdoor".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestTrapDoor(properties.get().variableOpacity(), material.requiredHarvestLevel()); } };
+        } else if ("button".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestButton(properties.get().doesNotBlockMovement(), material.requiredHarvestLevel()); } };
+        } else if ("slab".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestSlab(properties.get(), material.requiredHarvestLevel()); } };
+        } else if ("lever".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestLever(properties.get().doesNotBlockMovement(), material.requiredHarvestLevel()); } };
+        } else if ("pressure_plate".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestPressurePlate(properties.get(), material.requiredHarvestLevel()); } };
+        } else if ("stairs".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() {
+                Block base = stairBase == null ? Blocks.IRON_BLOCK : stairBase.get();
+                return new HarvestStairs(base.getDefaultState(), properties.get(), material.requiredHarvestLevel());
+            } };
+        } else if ("wall".equals(form)) {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestWall(properties.get(), material.requiredHarvestLevel()); } };
+        } else {
+            factory = new Supplier<Block>() { @Override public Block get() { return new HarvestBlock(properties.get(), material.requiredHarvestLevel()); } };
+        }
+        return registerBlock(id, factory, hasItem);
     }
 
-    private static RegistryObject<Block> registerMaterialBlock(String id, String form,
-            MaterialDefinition material, boolean item, Supplier<BlockBehaviour.Properties> properties,
-            Supplier<net.minecraft.world.level.block.state.BlockState> stairBase) {
-        Supplier<Block> factory = switch (form) {
-            case "plate" -> () -> new PlateBlock(properties.get().noOcclusion());
-            case "bars" -> () -> new IronBarsBlock(properties.get().noOcclusion());
-            case "door" -> () -> new DoorBlock(properties.get().noOcclusion());
-            case "trapdoor" -> () -> new TrapDoorBlock(properties.get().noOcclusion());
-            case "button" -> () -> new StoneButtonBlock(properties.get().noCollission());
-            case "slab" -> () -> new SlabBlock(properties.get());
-            case "lever" -> () -> new LeverBlock(properties.get().noCollission());
-            case "pressure_plate" -> () -> new PressurePlateBlock(
-                    PressurePlateBlock.Sensitivity.MOBS, properties.get());
-            case "stairs" -> () -> new StairBlock(stairBase, properties.get());
-            case "wall" -> () -> new WallBlock(properties.get());
-            default -> () -> new Block(properties.get());
-        };
-        return registerBlock(id, factory, item);
-    }
-
-    private static void registerEquipment(MaterialDefinition material, Map<String, RegistryObject<Item>> items) {
-        Item.Properties tool = new Item.Properties().tab(ModTabs.TOOLS).durability(material.toolDurability());
-        Item.Properties combat = new Item.Properties().tab(ModTabs.COMBAT);
-        items.put("pickaxe", registerItem(material.name() + "_pickaxe", () -> new MaterialItems.Pickaxe(material, tool)));
-        items.put("axe", registerItem(material.name() + "_axe", () -> new MaterialItems.Axe(material,
-                new Item.Properties().tab(ModTabs.TOOLS))));
-        items.put("shovel", registerItem(material.name() + "_shovel", () -> new MaterialItems.Shovel(material,
-                new Item.Properties().tab(ModTabs.TOOLS))));
-        items.put("hoe", registerItem(material.name() + "_hoe", () -> new MaterialItems.Hoe(material,
-                new Item.Properties().tab(ModTabs.TOOLS))));
-        items.put("sword", registerItem(material.name() + "_sword", () -> new MaterialItems.Sword(material,
-                new Item.Properties().tab(ModTabs.COMBAT))));
-        items.put("crackhammer", registerItem(material.name() + "_crackhammer", () -> new CrackhammerItem(material,
-                new Item.Properties().tab(ModTabs.TOOLS))));
-        items.put("scythe", registerItem(material.name() + "_scythe", () -> new ScytheItem(material,
-                new Item.Properties().tab(ModTabs.TOOLS))));
-        items.put("shears", registerItem(material.name() + "_shears", () -> new MaterialItems.Shears(material,
-                new Item.Properties().tab(ModTabs.TOOLS).durability(material.toolDurability()))));
-        items.put("fishing_rod", registerItem(material.name() + "_fishing_rod", () -> new MaterialItems.FishingRod(material,
-                new Item.Properties().tab(ModTabs.TOOLS).durability(material.toolDurability()))));
-        items.put("bow", registerItem(material.name() + "_bow", () -> new MaterialItems.Bow(material,
-                combat.durability(material.toolDurability()))));
-        items.put("crossbow", registerItem(material.name() + "_crossbow", () -> new MaterialItems.Crossbow(material,
-                new Item.Properties().tab(ModTabs.COMBAT).durability(material.toolDurability()))));
-        items.put("shield", registerItem(material.name() + "_shield", () -> new MaterialItems.Shield(material,
-                new Item.Properties().tab(ModTabs.COMBAT).durability(material.shieldDurability()))));
-        items.put("arrow", registerItem(material.name() + "_arrow", () -> new BaseMetalAmmoItem(material,
-                BaseMetalAmmoItem.Kind.ARROW, ModEntities.CUSTOM_ARROW::get,
-                new Item.Properties().tab(ModTabs.COMBAT))));
-        items.put("bolt", registerItem(material.name() + "_bolt", () -> new BaseMetalAmmoItem(material,
-                BaseMetalAmmoItem.Kind.BOLT, ModEntities.CUSTOM_BOLT::get,
-                new Item.Properties().tab(ModTabs.COMBAT))));
+    private static void registerEquipment(final MaterialDefinition material,
+            Map<String, RegistryHandle<Item>> items) {
+        items.put("pickaxe", registerItem(material.name() + "_pickaxe", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Pickaxe(material, toolProperties()); } }));
+        items.put("axe", registerItem(material.name() + "_axe", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Axe(material, toolProperties()); } }));
+        items.put("shovel", registerItem(material.name() + "_shovel", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Shovel(material, toolProperties()); } }));
+        items.put("hoe", registerItem(material.name() + "_hoe", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Hoe(material, toolProperties()); } }));
+        items.put("sword", registerItem(material.name() + "_sword", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Sword(material, combatProperties()); } }));
+        items.put("crackhammer", registerItem(material.name() + "_crackhammer", new Supplier<Item>() { @Override public Item get() { return new CrackhammerItem(material, toolProperties()); } }));
+        items.put("scythe", registerItem(material.name() + "_scythe", new Supplier<Item>() { @Override public Item get() { return new ScytheItem(material, toolProperties()); } }));
+        items.put("shears", registerItem(material.name() + "_shears", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Shears(material, toolProperties()); } }));
+        items.put("fishing_rod", registerItem(material.name() + "_fishing_rod", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.FishingRod(material, toolProperties()); } }));
+        items.put("bow", registerItem(material.name() + "_bow", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Bow(material, combatProperties()); } }));
+        items.put("crossbow", registerItem(material.name() + "_crossbow", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Crossbow(material, combatProperties()); } }));
+        items.put("shield", registerItem(material.name() + "_shield", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Shield(material, combatProperties()); } }));
+        items.put("arrow", registerAmmo(material, BaseMetalAmmoItem.Kind.ARROW));
+        items.put("bolt", registerAmmo(material, BaseMetalAmmoItem.Kind.BOLT));
         items.put("rod", registerSimpleMaterialItem(material.name() + "_rod", material));
         items.put("gear", registerSimpleMaterialItem(material.name() + "_gear", material));
-        items.put("horse_armor", registerItem(material.name() + "_horse_armor",
-                () -> new MaterialItems.HorseArmor(material, new Item.Properties().tab(ModTabs.COMBAT))));
-        items.put("helmet", registerArmor(material, EquipmentSlot.HEAD));
-        items.put("chestplate", registerArmor(material, EquipmentSlot.CHEST));
-        items.put("leggings", registerArmor(material, EquipmentSlot.LEGS));
-        items.put("boots", registerArmor(material, EquipmentSlot.FEET));
+        items.put("horse_armor", registerItem(material.name() + "_horse_armor", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.HorseArmor(material, combatProperties()); } }));
+        items.put("helmet", registerArmor(material, EntityEquipmentSlot.HEAD));
+        items.put("chestplate", registerArmor(material, EntityEquipmentSlot.CHEST));
+        items.put("leggings", registerArmor(material, EntityEquipmentSlot.LEGS));
+        items.put("boots", registerArmor(material, EntityEquipmentSlot.FEET));
     }
 
-    private static RegistryObject<Item> registerArmor(MaterialDefinition material, EquipmentSlot slot) {
-        String id = material.name() + "_" + switch (slot) {
-            case HEAD -> "helmet";
-            case CHEST -> "chestplate";
-            case LEGS -> "leggings";
-            case FEET -> "boots";
-            default -> throw new IllegalArgumentException("Not armor: " + slot);
-        };
-        return registerItem(id, () -> new MaterialItems.Armor(material, slot,
-                new Item.Properties().tab(ModTabs.COMBAT)));
+    private static RegistryHandle<Item> registerAmmo(final MaterialDefinition material, final BaseMetalAmmoItem.Kind kind) {
+        String suffix = kind == BaseMetalAmmoItem.Kind.ARROW ? "_arrow" : "_bolt";
+        return registerItem(material.name() + suffix, new Supplier<Item>() {
+            @Override public Item get() {
+                return new BaseMetalAmmoItem(material, kind,
+                        kind == BaseMetalAmmoItem.Kind.ARROW ? ModEntities.CUSTOM_ARROW : ModEntities.CUSTOM_BOLT,
+                        combatProperties());
+            }
+        });
+    }
+
+    private static RegistryHandle<Item> registerArmor(final MaterialDefinition material,
+            final EntityEquipmentSlot slot) {
+        String suffix;
+        switch (slot) {
+            case HEAD: suffix = "helmet"; break;
+            case CHEST: suffix = "chestplate"; break;
+            case LEGS: suffix = "leggings"; break;
+            case FEET: suffix = "boots"; break;
+            default: throw new IllegalArgumentException("Not armor: " + slot);
+        }
+        return registerItem(material.name() + "_" + suffix, new Supplier<Item>() {
+            @Override public Item get() { return new MaterialItems.Armor(material, slot, combatProperties()); }
+        });
     }
 
     private static void registerVanillaBits() {
-        Map<String, MaterialDefinition> vanilla = vanillaDefinitions();
-        RegistryObject<Block> charcoalBlock = registerBlock("charcoal_block",
-                () -> new Block(BlockBehaviour.Properties.of(Material.STONE)
-                        .sound(SoundType.SAND).requiresCorrectToolForDrops().strength(5.0F)), false);
-        registerItem("charcoal_block", () -> new MaterialItems.BurnableBlock(
-                charcoalBlock.get(), 16000, new Item.Properties().tab(ModTabs.BLOCKS)));
-        registerVanillaDecorative("diamond", vanilla.get("diamond"),
-                List.of("bars", "door", "trapdoor", "button", "slab", "lever", "pressure_plate", "stairs", "wall"));
-        registerVanillaDecorative("emerald", vanilla.get("emerald"),
-                List.of("bars", "door", "trapdoor", "button", "slab", "lever", "pressure_plate", "stairs", "wall"));
-        registerVanillaDecorative("gold", vanilla.get("gold"),
-                List.of("bars", "door", "trapdoor", "button", "slab", "lever", "stairs", "wall"));
-        registerVanillaDecorative("obsidian", vanilla.get("obsidian"),
-                List.of("bars", "door", "trapdoor", "button", "slab", "lever", "pressure_plate", "stairs", "wall"));
-        registerVanillaDecorative("iron", vanilla.get("iron"),
-                List.of("button", "slab", "lever", "stairs", "wall"));
-        registerVanillaDecorative("quartz", vanilla.get("quartz"),
-                List.of("bars", "door", "trapdoor", "button", "lever", "pressure_plate", "wall"));
-        registerBlock("gold_plate", () -> new PlateBlock(BlockBehaviour.Properties.copy(net.minecraft.world.level.block.Blocks.GOLD_BLOCK).noOcclusion()), true);
-        registerBlock("iron_plate", () -> new PlateBlock(BlockBehaviour.Properties.copy(net.minecraft.world.level.block.Blocks.IRON_BLOCK).noOcclusion()), true);
+        final Map<String, MaterialDefinition> vanilla = vanillaDefinitions();
+        final RegistryHandle<Block> charcoalBlock = registerBlock("charcoal_block", new Supplier<Block>() {
+            @Override public Block get() { return new HarvestBlock(Block.Properties.create(Material.ROCK)
+                    .sound(SoundType.SAND).hardnessAndResistance(5.0F), 0); }
+        }, false);
+        registerItem("charcoal_block", new Supplier<Item>() { @Override public Item get() {
+            return new MaterialItems.BurnableBlock(charcoalBlock.get(), 16000,
+                    new Item.Properties().group(ModTabs.BLOCKS));
+        } });
+        registerVanillaDecorative("diamond", vanilla.get("diamond"), list("bars", "door", "trapdoor", "button", "slab", "lever", "pressure_plate", "stairs", "wall"));
+        registerVanillaDecorative("emerald", vanilla.get("emerald"), list("bars", "door", "trapdoor", "button", "slab", "lever", "pressure_plate", "stairs", "wall"));
+        registerVanillaDecorative("gold", vanilla.get("gold"), list("bars", "door", "trapdoor", "button", "slab", "lever", "stairs", "wall"));
+        registerVanillaDecorative("obsidian", vanilla.get("obsidian"), list("bars", "door", "trapdoor", "button", "slab", "lever", "pressure_plate", "stairs", "wall"));
+        registerVanillaDecorative("iron", vanilla.get("iron"), list("button", "slab", "lever", "stairs", "wall"));
+        registerVanillaDecorative("quartz", vanilla.get("quartz"), list("bars", "door", "trapdoor", "button", "lever", "pressure_plate", "wall"));
+        registerPlate("gold_plate", Blocks.GOLD_BLOCK, vanilla.get("gold"));
+        registerPlate("iron_plate", Blocks.IRON_BLOCK, vanilla.get("iron"));
 
-        for (String name : List.of("diamond", "emerald", "gold", "iron", "obsidian", "quartz")) {
-            registerVanillaCombatAndUtility(vanilla.get(name));
-        }
-        for (String name : List.of("diamond", "emerald", "gold", "iron", "obsidian", "quartz", "stone", "wood")) {
-            MaterialDefinition material = vanilla.get(name);
-            registerItem(name + "_crackhammer", () -> new CrackhammerItem(material,
-                    new Item.Properties().tab(ModTabs.TOOLS)));
+        for (String name : list("diamond", "emerald", "gold", "iron", "obsidian", "quartz")) registerVanillaCombatAndUtility(vanilla.get(name));
+        for (String name : list("diamond", "emerald", "gold", "iron", "obsidian", "quartz", "stone", "wood")) {
+            final MaterialDefinition material = vanilla.get(name);
+            registerItem(name + "_crackhammer", new Supplier<Item>() { @Override public Item get() { return new CrackhammerItem(material, toolProperties()); } });
             registerSimpleMaterialItem(name + "_gear", material);
-            registerItem(name + "_scythe", () -> new ScytheItem(material,
-                    new Item.Properties().tab(ModTabs.TOOLS)));
+            registerItem(name + "_scythe", new Supplier<Item>() { @Override public Item get() { return new ScytheItem(material, toolProperties()); } });
         }
-        for (String name : List.of("coal", "charcoal", "diamond", "emerald", "gold", "iron", "obsidian", "quartz")) {
-            MaterialDefinition material = vanilla.get(name);
-            registerSimpleMaterialItem(name + "_powder", material);
-            registerSimpleMaterialItem(name + "_smallpowder", material);
+        for (String name : list("coal", "charcoal", "diamond", "emerald", "gold", "iron", "obsidian", "quartz")) {
+            registerSimpleMaterialItem(name + "_powder", vanilla.get(name));
+            registerSimpleMaterialItem(name + "_smallpowder", vanilla.get(name));
         }
         registerSimpleMaterialItem("redstone_smallpowder", vanilla.get("redstone"));
-        for (String name : List.of("coal", "charcoal", "diamond", "emerald", "obsidian", "quartz")) {
-            registerSimpleMaterialItem(name + "_nugget", vanilla.get(name));
-        }
-        for (String name : List.of("diamond", "gold", "iron")) {
+        for (String name : list("coal", "charcoal", "diamond", "emerald", "obsidian", "quartz")) registerSimpleMaterialItem(name + "_nugget", vanilla.get(name));
+        for (String name : list("diamond", "gold", "iron")) {
             registerSimpleMaterialItem(name + "_blend", vanilla.get(name));
             registerSimpleMaterialItem(name + "_smallblend", vanilla.get(name));
         }
@@ -292,88 +348,74 @@ public final class ModContent {
         registerSimpleMaterialItem("stone_rod", vanilla.get("stone"));
     }
 
-    private static void registerVanillaDecorative(String name, MaterialDefinition material,
+    private static void registerPlate(String id, final Block base, final MaterialDefinition material) {
+        registerBlock(id, new Supplier<Block>() { @Override public Block get() {
+            return new PlateBlock(Block.Properties.from(base).variableOpacity(), material.requiredHarvestLevel());
+        } }, true);
+    }
+
+    private static void registerVanillaDecorative(final String name, final MaterialDefinition material,
             List<String> forms) {
         for (String form : forms) {
+            final String targetForm = form;
             registerMaterialBlock(name + "_" + form, form, material, true,
-                    () -> vanillaDecorativeProperties(name, form, material),
-                    () -> vanillaStorageBlock(name).defaultBlockState());
+                    new Supplier<Block.Properties>() { @Override public Block.Properties get() { return vanillaDecorativeProperties(name, targetForm, material); } },
+                    new Supplier<Block>() { @Override public Block get() { return vanillaStorageBlock(name); } });
         }
         if (forms.contains("slab")) {
             String id = "double_" + name + "_slab";
-            registerBlock(id, () -> new CompatibilityDoubleSlabBlock(
-                    vanillaDecorativeProperties(name, "slab", material)), false);
+            registerBlock(id, new Supplier<Block>() { @Override public Block get() {
+                return new CompatibilityDoubleSlabBlock(vanillaDecorativeProperties(name, "slab", material), material.requiredHarvestLevel());
+            } }, false);
             HIDDEN_BLOCKS.add(id);
         }
     }
 
-    private static BlockBehaviour.Properties vanillaDecorativeProperties(String name, String form,
+    private static Block.Properties vanillaDecorativeProperties(String name, String form,
             MaterialDefinition material) {
-        boolean gem = name.equals("diamond") || name.equals("emerald")
-                || name.equals("obsidian") || name.equals("quartz");
-        boolean lockedGemDoor = gem && !name.equals("quartz")
-                && (form.equals("door") || form.equals("trapdoor"));
-        Material blockMaterial = name.equals("gold") || name.equals("iron") || lockedGemDoor
-                ? Material.METAL : Material.STONE;
-        return BlockBehaviour.Properties.of(blockMaterial)
-                .sound(gem ? SoundType.GLASS : SoundType.METAL)
-                .requiresCorrectToolForDrops()
-                .strength(material.blockHardness(), material.blastResistance());
+        boolean gem = "diamond".equals(name) || "emerald".equals(name) || "obsidian".equals(name) || "quartz".equals(name);
+        boolean lockedGemDoor = gem && !"quartz".equals(name) && ("door".equals(form) || "trapdoor".equals(form));
+        Material blockMaterial = "gold".equals(name) || "iron".equals(name) || lockedGemDoor ? Material.IRON : Material.ROCK;
+        return Block.Properties.create(blockMaterial).sound(gem ? SoundType.GLASS : SoundType.METAL)
+                .hardnessAndResistance(material.blockHardness(), material.blastResistance());
     }
 
     private static Block vanillaStorageBlock(String name) {
-        return switch (name) {
-            case "diamond" -> net.minecraft.world.level.block.Blocks.DIAMOND_BLOCK;
-            case "emerald" -> net.minecraft.world.level.block.Blocks.EMERALD_BLOCK;
-            case "gold" -> net.minecraft.world.level.block.Blocks.GOLD_BLOCK;
-            case "iron" -> net.minecraft.world.level.block.Blocks.IRON_BLOCK;
-            case "obsidian" -> net.minecraft.world.level.block.Blocks.OBSIDIAN;
-            case "quartz" -> net.minecraft.world.level.block.Blocks.QUARTZ_BLOCK;
-            default -> throw new IllegalArgumentException("No vanilla storage block for " + name);
-        };
+        if ("diamond".equals(name)) return Blocks.DIAMOND_BLOCK;
+        if ("emerald".equals(name)) return Blocks.EMERALD_BLOCK;
+        if ("gold".equals(name)) return Blocks.GOLD_BLOCK;
+        if ("iron".equals(name)) return Blocks.IRON_BLOCK;
+        if ("obsidian".equals(name)) return Blocks.OBSIDIAN;
+        if ("quartz".equals(name)) return Blocks.QUARTZ_BLOCK;
+        throw new IllegalArgumentException("No vanilla storage block for " + name);
     }
 
-    private static void registerVanillaCombatAndUtility(MaterialDefinition material) {
+    private static void registerVanillaCombatAndUtility(final MaterialDefinition material) {
         String name = material.name();
-        registerItem(name + "_arrow", () -> new BaseMetalAmmoItem(material, BaseMetalAmmoItem.Kind.ARROW,
-                ModEntities.CUSTOM_ARROW::get, new Item.Properties().tab(ModTabs.COMBAT)));
-        registerItem(name + "_bolt", () -> new BaseMetalAmmoItem(material, BaseMetalAmmoItem.Kind.BOLT,
-                ModEntities.CUSTOM_BOLT::get, new Item.Properties().tab(ModTabs.COMBAT)));
-        registerItem(name + "_bow", () -> new MaterialItems.Bow(material,
-                new Item.Properties().tab(ModTabs.COMBAT).durability(material.toolDurability())));
-        registerItem(name + "_crossbow", () -> new MaterialItems.Crossbow(material,
-                new Item.Properties().tab(ModTabs.COMBAT).durability(material.toolDurability())));
-        registerItem(name + "_fishing_rod", () -> new MaterialItems.FishingRod(material,
-                new Item.Properties().tab(ModTabs.TOOLS).durability(material.toolDurability())));
+        registerAmmo(material, BaseMetalAmmoItem.Kind.ARROW);
+        registerAmmo(material, BaseMetalAmmoItem.Kind.BOLT);
+        registerItem(name + "_bow", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Bow(material, combatProperties()); } });
+        registerItem(name + "_crossbow", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Crossbow(material, combatProperties()); } });
+        registerItem(name + "_fishing_rod", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.FishingRod(material, toolProperties()); } });
         registerSimpleMaterialItem(name + "_rod", material);
-        if (!name.equals("iron")) {
-            registerItem(name + "_shears", () -> new MaterialItems.Shears(material,
-                    new Item.Properties().tab(ModTabs.TOOLS).durability(material.toolDurability())));
-        }
-        registerItem(name + "_shield", () -> new MaterialItems.Shield(material,
-                new Item.Properties().tab(ModTabs.COMBAT).durability(material.shieldDurability())));
-        // Preserve IDs which were added for vanilla materials by MMDLib. The
-        // vanilla equipment itself remains the canonical tool/armor where present.
-        if (name.equals("emerald") || name.equals("obsidian") || name.equals("quartz")) {
-            registerItem(name + "_axe", () -> new MaterialItems.Axe(material, new Item.Properties().tab(ModTabs.TOOLS)));
-            registerItem(name + "_pickaxe", () -> new MaterialItems.Pickaxe(material, new Item.Properties().tab(ModTabs.TOOLS)));
-            registerItem(name + "_shovel", () -> new MaterialItems.Shovel(material, new Item.Properties().tab(ModTabs.TOOLS)));
-            registerItem(name + "_hoe", () -> new MaterialItems.Hoe(material, new Item.Properties().tab(ModTabs.TOOLS)));
-            registerArmor(material, EquipmentSlot.HEAD);
-            registerArmor(material, EquipmentSlot.CHEST);
-            registerArmor(material, EquipmentSlot.LEGS);
-            registerArmor(material, EquipmentSlot.FEET);
-            registerItem(name + "_horse_armor", () -> new MaterialItems.HorseArmor(material,
-                    new Item.Properties().tab(ModTabs.COMBAT)));
-        }
-        if (name.equals("emerald") || name.equals("obsidian") || name.equals("quartz")) {
-            registerItem(name + "_sword", () -> new MaterialItems.Sword(material,
-                    new Item.Properties().tab(ModTabs.COMBAT)));
+        if (!"iron".equals(name)) registerItem(name + "_shears", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Shears(material, toolProperties()); } });
+        registerItem(name + "_shield", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Shield(material, combatProperties()); } });
+        if ("emerald".equals(name) || "obsidian".equals(name) || "quartz".equals(name)) {
+            registerItem(name + "_axe", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Axe(material, toolProperties()); } });
+            registerItem(name + "_pickaxe", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Pickaxe(material, toolProperties()); } });
+            registerItem(name + "_shovel", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Shovel(material, toolProperties()); } });
+            registerItem(name + "_hoe", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Hoe(material, toolProperties()); } });
+            registerArmor(material, EntityEquipmentSlot.HEAD);
+            registerArmor(material, EntityEquipmentSlot.CHEST);
+            registerArmor(material, EntityEquipmentSlot.LEGS);
+            registerArmor(material, EntityEquipmentSlot.FEET);
+            registerItem(name + "_horse_armor", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.HorseArmor(material, combatProperties()); } });
+            registerItem(name + "_sword", new Supplier<Item>() { @Override public Item get() { return new MaterialItems.Sword(material, combatProperties()); } });
         }
     }
 
     private static Map<String, MaterialDefinition> vanillaDefinitions() {
-        Map<String, MaterialDefinition> map = new LinkedHashMap<>();
+        Map<String, MaterialDefinition> map = new LinkedHashMap<String, MaterialDefinition>();
         addVanilla(map, "wood", 2, 2, 6, 0x695433);
         addVanilla(map, "stone", 5, 4, 2, 0x8F8F8F);
         addVanilla(map, "iron", 8, 8, 4.5, 0xD8D8D8);
@@ -395,72 +437,59 @@ public final class ModContent {
                 hardness, strength, magic, colour, false));
     }
 
-    @SuppressWarnings("unchecked")
-    private static void registerFluid(String name, int colour, boolean mercury) {
-        RegistryObject<ForgeFlowingFluid.Source>[] source = new RegistryObject[1];
-        RegistryObject<ForgeFlowingFluid.Flowing>[] flowing = new RegistryObject[1];
-        RegistryObject<LiquidBlock>[] block = new RegistryObject[1];
-        RegistryObject<Item>[] bucket = new RegistryObject[1];
-        ResourceLocation still = new ResourceLocation(BaseMetals.MOD_ID,
-                mercury ? "block/mercury_still" : "block/molten_metal_still");
-        ResourceLocation flow = new ResourceLocation(BaseMetals.MOD_ID,
-                mercury ? "block/mercury_flow" : "block/molten_metal_flow");
-        ForgeFlowingFluid.Properties properties = new ForgeFlowingFluid.Properties(
-                () -> source[0].get(), () -> flowing[0].get(),
-                FluidAttributes.builder(still, flow)
-                        .color(0xFF000000 | colour)
-                        .density(mercury ? 13594 : 2000)
-                        .viscosity(mercury ? 2000 : 10000)
-                        .temperature(769)
-                        .luminosity(mercury ? 0 : 10)
-                        .sound(SoundEvents.BUCKET_FILL_LAVA, SoundEvents.BUCKET_EMPTY_LAVA))
-                .bucket(() -> bucket[0].get())
-                .block(() -> block[0].get())
-                .slopeFindDistance(2)
-                .levelDecreasePerBlock(2)
-                .tickRate(30)
-                .explosionResistance(100.0F);
-        source[0] = FLUIDS.register(name, () -> new ForgeFlowingFluid.Source(properties));
-        flowing[0] = FLUIDS.register("flowing_" + name, () -> new ForgeFlowingFluid.Flowing(properties));
-        block[0] = BLOCKS.register(name, () -> new MoltenMetalBlock(() -> source[0].get(),
-                BlockBehaviour.Properties.of(Material.LAVA).noCollission().strength(100.0F).noDrops(), mercury));
-        BLOCKS_BY_ID.put(name, block[0]);
-        // Forge 1.12 registered an ItemBlock under every molten block ID. Keep
-        // those hidden inventory IDs so old stacks can survive a world upgrade.
-        registerItem(name, () -> new BlockItem(block[0].get(), new Item.Properties()));
-        bucket[0] = registerItem(name + "_bucket", () -> new BaseMetalBucketItem(() -> source[0].get(),
-                new Item.Properties().craftRemainder(Items.BUCKET).stacksTo(1).tab(ModTabs.ITEMS)));
-        FLUID_CONTENT.put(name, new FluidContent(source[0], flowing[0], block[0], bucket[0]));
+    private static void registerFluid(final String name, int colour, final boolean mercury) {
+        final RegistryHandle<FlowingFluid> source = new RegistryHandle<FlowingFluid>(name);
+        final RegistryHandle<FlowingFluid> flowing = new RegistryHandle<FlowingFluid>("flowing_" + name);
+        final RegistryHandle<BlockFlowingFluid> block = new RegistryHandle<BlockFlowingFluid>(name);
+        final RegistryHandle<Item> bucket = new RegistryHandle<Item>(name + "_bucket");
+        FLUID_CONTENT.put(name, new FluidContent(source, flowing, block, bucket));
+        FLUID_COLOURS.put(name, Integer.valueOf(colour));
+        RegistryHandle<Block> blockHandle = registerBlock(name, new Supplier<Block>() { @Override public Block get() {
+            MoltenMetalBlock value = new MoltenMetalBlock(source.get(),
+                    Block.Properties.create(Material.LAVA).doesNotBlockMovement()
+                            .hardnessAndResistance(100.0F).variableOpacity(), mercury);
+            block.bind(value);
+            return value;
+        } }, false);
+        registerItem(name, new Supplier<Item>() { @Override public Item get() {
+            return new ItemBlock(blockHandle.get(), new Item.Properties());
+        } });
+        registerItem(name + "_bucket", new Supplier<Item>() { @Override public Item get() {
+            BaseMetalBucketItem value = new BaseMetalBucketItem(source.get(),
+                    new Item.Properties().containerItem(Items.BUCKET).maxStackSize(1).group(ModTabs.ITEMS));
+            bucket.bind(value);
+            return value;
+        } });
     }
 
-    private static RegistryObject<Block> registerAnvil(String id, BlockBehaviour.Properties properties) {
-        return registerBlock(id, () -> new BaseMetalAnvilBlock(properties), true);
+    private static RegistryHandle<Block> registerAnvil(String id, final Block.Properties properties) {
+        return registerBlock(id, new Supplier<Block>() { @Override public Block get() { return new BaseMetalAnvilBlock(properties); } }, true);
     }
 
-    private static RegistryObject<Block> registerBlock(String id, Supplier<? extends Block> factory, boolean hasItem) {
+    private static RegistryHandle<Block> registerBlock(String id, Supplier<? extends Block> factory, boolean hasItem) {
         if (BLOCKS_BY_ID.containsKey(id)) throw new IllegalStateException("Duplicate block " + id);
-        RegistryObject<Block> block = BLOCKS.register(id, factory);
-        BLOCKS_BY_ID.put(id, block);
-        if (hasItem) {
-            registerItem(id, () -> new BlockItem(block.get(), new Item.Properties().tab(ModTabs.BLOCKS)));
-        }
-        return block;
+        final RegistryHandle<Block> handle = new RegistryHandle<Block>(id);
+        BLOCKS_BY_ID.put(id, handle);
+        BLOCK_FACTORIES.put(id, factory);
+        if (hasItem) registerItem(id, new Supplier<Item>() { @Override public Item get() {
+            return new ItemBlock(handle.get(), new Item.Properties().group(ModTabs.BLOCKS));
+        } });
+        return handle;
     }
 
-    private static RegistryObject<Item> registerSimpleMaterialItem(String id, MaterialDefinition material) {
-        return registerSimpleMaterialItem(id, material, ModTabs.ITEMS);
-    }
-
-    private static RegistryObject<Item> registerSimpleMaterialItem(String id, MaterialDefinition material,
-            net.minecraft.world.item.CreativeModeTab tab) {
-        return registerItem(id, () -> new MaterialItems.Basic(material, burnTime(id),
-                new Item.Properties().tab(tab)));
+    private static RegistryHandle<Item> registerSimpleMaterialItem(final String id,
+            final MaterialDefinition material) {
+        return registerItem(id, new Supplier<Item>() { @Override public Item get() {
+            return new MaterialItems.Basic(material, burnTime(id), new Item.Properties().group(ModTabs.ITEMS));
+        } });
     }
 
     private static int burnTime(String id) {
-        if (id.equals("charcoal_block")) return 16000;
-        if (id.equals("wood_gear")) return 300;
-        String material = id.substring(0, id.lastIndexOf('_'));
+        if ("charcoal_block".equals(id)) return 16000;
+        if ("wood_gear".equals(id)) return 300;
+        int separator = id.lastIndexOf('_');
+        if (separator < 0) return -1;
+        String material = id.substring(0, separator);
         if (!isLegacyFuelMaterial(material)) return -1;
         if (id.endsWith("_powder")) return 1600;
         if (id.endsWith("_nugget") || id.endsWith("_smallpowder")) return 200;
@@ -468,27 +497,94 @@ public final class ModContent {
     }
 
     private static boolean isLegacyFuelMaterial(String name) {
-        if (name.equals("coal") || name.equals("charcoal")) return true;
-        return MaterialCatalogue.ALL.stream()
-                .anyMatch(material -> material.name().equals(name) && material.hasEquipment());
+        if ("coal".equals(name) || "charcoal".equals(name)) return true;
+        for (MaterialDefinition material : MaterialCatalogue.ALL) {
+            if (material.name().equals(name) && material.hasEquipment()) return true;
+        }
+        return false;
     }
 
-    private static RegistryObject<Item> registerItem(String id, Supplier<? extends Item> factory) {
+    private static RegistryHandle<Item> registerItem(String id, Supplier<? extends Item> factory) {
         if (ITEMS_BY_ID.containsKey(id)) throw new IllegalStateException("Duplicate item " + id);
-        RegistryObject<Item> item = ITEMS.register(id, factory);
-        ITEMS_BY_ID.put(id, item);
-        return item;
+        RegistryHandle<Item> handle = new RegistryHandle<Item>(id);
+        ITEMS_BY_ID.put(id, handle);
+        ITEM_FACTORIES.put(id, factory);
+        return handle;
     }
 
-    private static BlockBehaviour.Properties metalProperties(MaterialDefinition material) {
-        return BlockBehaviour.Properties.of(Material.METAL)
-                .sound(SoundType.METAL).requiresCorrectToolForDrops()
-                .strength(material.blockHardness(), material.blastResistance());
+    private static Item.Properties toolProperties() { return new Item.Properties().group(ModTabs.TOOLS); }
+    private static Item.Properties combatProperties() { return new Item.Properties().group(ModTabs.COMBAT); }
+    private static Block.Properties metalProperties(MaterialDefinition material) {
+        return Block.Properties.create(Material.IRON).sound(SoundType.METAL)
+                .hardnessAndResistance(material.blockHardness(), material.blastResistance());
+    }
+    private static Block.Properties oreProperties(MaterialDefinition material) {
+        return Block.Properties.create(Material.ROCK).sound(SoundType.STONE)
+                .hardnessAndResistance(material.oreHardness(), material.blastResistance());
+    }
+    private static ResourceLocation id(String path) { return new ResourceLocation(BaseMetals.MOD_ID, path); }
+    private static List<String> list(String... values) {
+        return Collections.unmodifiableList(Arrays.asList(values));
     }
 
-    private static BlockBehaviour.Properties oreProperties(MaterialDefinition material) {
-        return BlockBehaviour.Properties.of(Material.STONE)
-                .sound(SoundType.STONE).requiresCorrectToolForDrops()
-                .strength(material.oreHardness(), material.blastResistance());
+    private static class HarvestBlock extends Block {
+        private final int level;
+        HarvestBlock(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestPane extends BlockPane {
+        private final int level;
+        HarvestPane(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestDoor extends BlockDoor {
+        private final int level;
+        HarvestDoor(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestTrapDoor extends BlockTrapDoor {
+        private final int level;
+        HarvestTrapDoor(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestButton extends BlockButtonStone {
+        private final int level;
+        HarvestButton(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestSlab extends BlockSlab {
+        private final int level;
+        HarvestSlab(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestLever extends BlockLever {
+        private final int level;
+        HarvestLever(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestPressurePlate extends BlockPressurePlate {
+        private final int level;
+        HarvestPressurePlate(Properties properties, int level) { super(Sensitivity.MOBS, properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestStairs extends BlockStairs {
+        private final int level;
+        HarvestStairs(net.minecraft.block.state.IBlockState base, Properties properties, int level) { super(base, properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
+    }
+    private static class HarvestWall extends BlockWall {
+        private final int level;
+        HarvestWall(Properties properties, int level) { super(properties); this.level = level; }
+        @Override public ToolType getHarvestTool(net.minecraft.block.state.IBlockState state) { return ToolType.PICKAXE; }
+        @Override public int getHarvestLevel(net.minecraft.block.state.IBlockState state) { return level; }
     }
 }
